# esp32_talk

./: .gitignore  CMakeLists.txt  README.md  esp_idf_project_configuration.json  partitions.csv  sdkconfig.defaults
.github/agents/: ESP-IDF.agent.md
components/codec2/: CMakeLists.txt  codec2_esp_malloc.c  esp32_codec2_3200_mem_stability.patch  esp32_sine_stack_fix.patch  fetch_codec2.sh
main/: CMakeLists.txt  app_hf_msg_set.c  bt_app_hf.c  bt_app_hf.h  codec2_wrapper.c  codec2_wrapper.h  config.h  display.c  display.h  espnow_transport.c  espnow_transport.h  main.c  walkie_talkie.c  walkie_talkie.h
